tdf#129634 send SalEvent::LoseFocus only if some other widget gains focus

not if we "lose" focus to nothing before we would regain it again

Change-Id: Ie477aff5cfaa3b64589cb3246ff38d4e57068ead